anchors and rooms queries
