# api/swagger/swagger.yaml
@@ -18,30 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /buildings:
     # binds a127 app logic to a route
     x-swagger-router-controller: building
@@ -60,7 +36,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /building/{idBuilding}/anchors:
+  /buildings/{idBuilding}/anchors:
     x-swagger-router-controller: anchors
     get:
       description: Returns anchors of a place
@@ -101,16 +77,32 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /buildings/{idBuilding}/rooms:
+    x-swagger-router-controller: rooms
+    get:
+      description: "Returns all the rooms details"
+      operationId: getRooms
+      parameters:
+        - name: "idBuilding"
+          in: "path"
+          description: "ID of the building"
+          required: true
+          type: "string"
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/RoomResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   BuildingsResponse:
     required:
       - buildings
@@ -127,6 +119,12 @@ definitions:
         type: "array"
         items:
           type: "boolean"
+  RoomResponse:
+    required:
+      - room
+    properties:
+      room:
+        type: "object"
   ErrorResponse:
     required:
       - message
